--- a/package.json
+++ b/package.json
@@ -5,8 +5,21 @@
         "prod": "CRM_LOCATION=https://magni.mypebble.co.uk gulp build"
     },
     "dependencies": {
+        "babel-core": "^6.24.1",
+        "babel-loader": "^7.0.0",
+        "babel-preset-latest": "^6.24.1",
+        "backbone": "^1.3.3",
+        "backbone.marionette": "^3.3.1",
+        "cross-env": "^5.0.0",
+        "css-loader": "^0.28.2",
         "gulp": "^3.9.1",
         "gulp-copy": "^1.0.0",
-        "gulp-string-replace": "^0.4.0"
+        "gulp-string-replace": "^0.4.0",
+        "jquery": "^3.2.1",
+        "node-sass": "^4.5.3",
+        "sass-loader": "^6.0.5",
+        "style-loader": "^0.18.1",
+        "underscore-template-loader": "^0.7.3",
+        "webpack": "^2.6.0"
     }
 }
