--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "gulp": "^3.9.1",
         "gulp-copy": "^1.0.0",
         "gulp-string-replace": "^0.4.0",
+        "gulp-zip": "^4.0.0",
         "jquery": "^3.2.1",
         "node-sass": "^4.5.3",
         "sass-loader": "^6.0.5",
